Modified build and run scripts for example query.